--- a/assignments/assignment-2/assignment2.css
+++ b/assignments/assignment-2/assignment2.css
@@ -10,3 +10,27 @@
     height:40px;
     display:inline-block;
 }
+.id3
+{
+    margin-top:10px;
+}
+.sec
+{
+    width:49%;
+}
+.mar
+{
+    margin-right:2%;
+}
+.third
+{
+    width:32%;
+}
+.four
+{
+    width:23.5%;
+}
+.fifth
+{
+    width:6.5%;
+}
