--- a/assignments/assignment-3/assignment3.css
+++ b/assignments/assignment-3/assignment3.css
@@ -1,12 +1,11 @@
-.id1
+.cards_style
 {
     background-color:white;
     width:32%;
     height:300px;
-    overflow: scroll;
     border-radius:10px;
 }
-.id2
+.cards_space
 {
     margin-right: 2%;
 }
@@ -30,15 +29,15 @@ h3
      margin-top:-10px;
     color:grey;
 }
-.id3{
+.cards_padding{
     padding-left:15px;
     padding-right:15px;
 }
-.id4
+.heading_border
 {
     border-bottom:2px solid dodgerblue;
 }
-.id5
+.heading_font
 {
     font-weight:normal;
 }
