--- a/bootstrap-practice/practice-bootstrap.css
+++ b/bootstrap-practice/practice-bootstrap.css
@@ -114,6 +114,8 @@ p{
     padding:3% 0;
     word-wrap:break-word;
     text-align:center;
+    margin-bottom:20px;
+    margin-top:20px;
 }
 .visitWebsite
 {
