--- a/assignments/assignment-13/assignment13.css
+++ b/assignments/assignment-13/assignment13.css
@@ -6,10 +6,13 @@
     padding:20px;
 }
 .descriptionBlock
-{   
-    margin-top:15px;
+{ 
     background-color:lavender;
     margin-bottom:15px;
+}
+.margin-top
+{
+    margin-top:15px;
 }
 .descriptionFontSize
 {
