--- a/assignments/assignment-18/index.css
+++ b/assignments/assignment-18/index.css
@@ -5,7 +5,7 @@
     background-color:orange;
     margin-bottom:10px;
     font-size:14px;
-    border:2px solid black;
+    border:3px solid black;
 }
 h1
 {
@@ -27,7 +27,8 @@ h1
     background-color:#246caf;
     margin-bottom:30px;
     font-size:18px;
-    border:2px dotted black;
+    color:white;
+    border:3px dotted black;
 }
 .lg
 {
@@ -37,6 +38,7 @@ h1
     margin-bottom:40px;
     text-align:center;
     font-size:20px;
+    color:white;
     border:5px solid black;
 }
 .xl
