--- a/assignments/assignment-20/index.css
+++ b/assignments/assignment-20/index.css
@@ -1,25 +1,23 @@
 .backgroundImage
 {
     background-image:url(assets/background-image.jpeg);
-    height:500px;
     border-radius:30px;
 }
 .gradient
 {
     background-image:linear-gradient(135deg,#72edf2 10%,#5151e5 100%);
-    height:500px;
     border-radius:30px;
+    opacity:0.8;
+    padding-bottom:10px;
 }
 .black
 {
     background-color:black;
-    height:500px;
-    opacity:0.8;
     border-radius:30px;
 }
 .head
 {
-    padding-top:20px;
+    padding-top:30px;
 }
 .date
 {
@@ -37,15 +35,20 @@
 }
 .weatherValues
 {
-    font-size:10px;
+    line-height:0.8;
     text-align:right;
 }
 .sat
 {
     background-color:white;
+    border-radius:10px;
     padding:5px;
-    border-radius:5px;
+    margin-left:10px;
     text-align:center;
+}
+.days
+{
+    padding-top:10px;
 }
 .sun
 {
@@ -56,5 +59,46 @@
 }
 .weatherspace
 {
-    margin-top:20px;
+    margin-top:40px;
+}
+.changeLocation
+{
+    margin-top: 40px;
+    color:white;
+    font-weight:bold;
+    background-image:linear-gradient(#72edf2,#5151e5);
+    text-align: center;
+    border-radius:20px;
+}
+.locationPadding
+{
+    padding:10px;
+    opacity:1.0;
+}
+.black1
+{
+    background-color:black;
+    border-radius:30px;
+}
+.temperature
+{
+    font-weight:bold;
+    font-size:60px;
+    margin-bottom:-10px;
+}
+.gradientSun
+{
+    height:60px;
+    width:60px;
+    margin-top:80px;
+}
+.locationImg
+{
+    width:15px;
+    height:15px;
+}
+.temp
+{
+    font-weight:bold;
+    font-size:15px;
 }
