--- a/assignments/assignment-22/index.css
+++ b/assignments/assignment-22/index.css
@@ -5,20 +5,20 @@ body
 .HeadingAlign
 {
     text-align:center;
-    margin-top:30px;
+    margin-top:20px;
     margin-bottom:30px;
 }
 .cardListItems
 {
-    /*font-size:20px;*/
-    margin-top:30px;
+    font-size:15px;
+    margin-top:20px;
     list-style-type:none;
-    margin-bottom:30px;
+    margin-bottom:20px;
 }
-/*.cardTextSize
+.cardTextSize
 {
-    font-size:20px;
-}*/
+    font-size:15px;
+}
 img
 {
     height:60px;
