--- a/assignments/assignment-23/index.css
+++ b/assignments/assignment-23/index.css
@@ -109,5 +109,10 @@ li{
 .dropdownStyle
 {
     margin-top:100px;
-    
+}
+.footerDesktop
+{
+    margin-top:30px;
+    opacity:0.6;
+    margin-bottom:30px;
 }
