--- a/assignments/assignment-23/index.css
+++ b/assignments/assignment-23/index.css
@@ -114,6 +114,13 @@ li{
 {
     margin-top:30px;
     opacity:0.6;
-    font-size:10px;
+    font-size:15px;
     margin-bottom:30px;
+}
+.footerDesktopImg
+{
+    margin-top:50px;
+    opacity:0.6;
+    font-size:15px;
+      margin-bottom:30px;
 }
