--- a/assignments/assignment-20/index.css
+++ b/assignments/assignment-20/index.css
@@ -5,15 +5,9 @@
 }
 .gradient
 {
-    background-image:linear-gradient(135deg,#72edf2 10%,#5151e5 100%);
+    background-image:linear-gradient(135deg,#72edf2B3 10%,#5151e5B3 100%);
     border-radius:30px;
-    opacity:0.8;
     padding-bottom:10px;
-}
-.black
-{
-    background-color:black;
-    border-radius:30px;
 }
 .head
 {
@@ -38,7 +32,7 @@
     line-height:0.8;
     text-align:right;
 }
-.sat
+.weatherforecastvalue
 {
     background-color:white;
     border-radius:10px;
@@ -50,7 +44,7 @@
 {
     padding-top:10px;
 }
-.sun
+.weatherforecastvaluestyle
 {
     color:white;
     padding:5px;
@@ -75,7 +69,7 @@
     padding:10px;
     opacity:1.0;
 }
-.black1
+.blackbackground
 {
     background-color:black;
     border-radius:30px;
