--- a/assignments/assignment-24/index.css
+++ b/assignments/assignment-24/index.css
@@ -20,7 +20,7 @@
 
 .topicsSec {
     padding-top: 40px;
-    background-color: lavender;
+    background-color:whitesmoke;
     padding-bottom: 40px;
 }
 
