--- a/assignments/assignment-18/index.css
+++ b/assignments/assignment-18/index.css
@@ -45,7 +45,7 @@ h1
 {
     padding-top:50px;
     padding-bottom:50px;
-    background-color:#white;
+    background-color:white;
     margin-bottom:50px;
     text-align:center;
     font-size:22px;
