--- a/my_portfolio.css
+++ b/my_portfolio.css
@@ -9,7 +9,10 @@
     width: 100%;
     background-size: cover;
 }
-
+.skillsImg
+{
+    height:60px;
+}
 .pageBackgroundContent {
     font-weight: bold;
     color: white;
@@ -33,4 +36,19 @@
 
 li {
     list-style-type:none;
+}
+.skillsContext
+{
+    font-weight:bold;
+}
+.bootsrapIcon
+{
+    border-radius:10px;
+    display:inline-block;
+    padding:5px 0;
+    color:white;
+    width:60px;
+    text-align:center;
+    background-color:purple;
+    font-size:24px;
 }
