--- a/assignments/assignment-31/index.css
+++ b/assignments/assignment-31/index.css
@@ -28,6 +28,7 @@ li {
 }
 .carImage{
     height:200px;
+    border-radius:10px;
 }
 .blockBackGround {
     background-color: aliceblue;
@@ -43,7 +44,7 @@ li {
 
 .bar {
     height: 3px;
-    width: 40px;
+    width: 50px;
     background-color: orange;
     text-align: center;
 }
@@ -65,7 +66,7 @@ li {
 }
 
 .icons {
-    height: 30px;
+    height: 25px;
 }
 .testimonialFont{
     font-weight:bold;
