--- a/assignments/assignment-31/index.css
+++ b/assignments/assignment-31/index.css
@@ -8,6 +8,7 @@ li {
     color: black;
     opacity: 0.6;
 }
+
 .logo {
     height: 40px;
     width: 40px;
@@ -15,8 +16,12 @@ li {
     border-radius: 50%;
     padding: 6px;
 }
+.simpleAndHandyProcessPara{
+    width:100%;
+    margin:auto;
+}
 
-.logoheading {
+.logoHeading {
     display: inline-block;
 }
 
@@ -81,4 +86,10 @@ li {
 .footerPadding{
     padding-bottom:20px;
     padding-top:20px;
+}
+
+@media only screen and (min-width:768px){
+    simpleAndHandyProcessPara{
+        width:700px;
+    }
 }
